--- a/src/app/modules/transport/template/template.component.html
+++ b/src/app/modules/transport/template/template.component.html
@@ -54,6 +54,9 @@
                 <a routerLink="/transport/visite-technique" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
                   <i class="fas fa-car-mechanic"></i> Visites Techniques
                 </a>
+                <a routerLink="/transport/entretien" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
+                  <i class="fas fa-car-battery"></i> Entretiens
+                </a>
                 <!-- <a routerLink="/transport/mes-conducteurs" class="d-none d-sm-inline-block mr-3 ml-3 text-secondary">
                   <i class="fas fa-user-tie"></i> cartes rapido
                 </a> -->
