--- a/src/app/shared/components/custom-input/custom-checkbox/custom-checkbox.component.html
+++ b/src/app/shared/components/custom-input/custom-checkbox/custom-checkbox.component.html
@@ -2,7 +2,7 @@
   TOUS
   <i [ngClass]="!onCountChecked(false) ? 'fas fa-check-square' : 'fal fa-square'"></i>
 </button>
-<div class="d-flex flex-wrap">
+<div class="d-flex flex-wrap" [class.loading]="loading">
     <button *ngFor="let item of checkboxItems" class="btn m-1 card-1" [ngClass]="item.checked ? 'btn-primary' : 'btn-outline-primary'" (click)="item.checked = !item.checked;onSetSelected();">
       {{item.libelle | titlecase }}
       <i [ngClass]="item.checked ? 'fas fa-check-square' : 'fal fa-square'"></i>
