--- a/src/app/shared-module/sidebar/sidebar.component.html
+++ b/src/app/shared-module/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
   <div class="sidebar-brand-icon">
     <i class="fas fa-th-large"></i>
   </div>
-  <div class="sidebar-brand-text mx-3">Mokano</div>
+  <div class="sidebar-brand-text mx-3">Aleph</div>
 </a>
 <!-- Divider -->
 <hr class="sidebar-divider">
